--- a/PracticaIntegradora/desafio/views/productForm.handlebars
+++ b/PracticaIntegradora/desafio/views/productForm.handlebars
@@ -1,5 +1,5 @@
-<h1>HOLA {{nombre}}</h1>
-<form action="/realtimeproducts" method="POST" enctype="multipart/form-data">
+<h1>Bienvenido al formulario de Productos {{nombre}}</h1>
+<form action="/realtimeproducts" method="POST">
         <label for="title">Titulo</label>
         <input type="text" name="title" id="title"><br>
         <label for="description">Descripcion</label>
